fix/styles: add z-index in navbar

--- a/src/styles/component/_navbar.scss
+++ b/src/styles/component/_navbar.scss
@@ -1,4 +1,5 @@
 .c-navbar {
+  z-index: 20;
   @include breakpoint(small-up) {
     width: 100%;
   }
